feat: add an option to evaluate as object
https://gravitee.atlassian.net/browse/APIM-12684